--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,40 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>GIDClientID</key>
+	<!-- TODO Replace this value: -->
+	<!-- Copied from GoogleService-Info.plist key CLIENT_ID -->
+	<string>191251944607-jp5vimr82a3oqq6p87c7eudri7c6sqid.apps.googleusercontent.com</string>
+	<key>GIDServerClientID</key>
+	<string>[YOUR SERVER CLIENT ID]</string>
+	<!-- Put me in the [my_project]/ios/Runner/Info.plist file -->
+	<!-- Google Sign-in Section -->
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<!-- TODO Replace this value: -->
+				<!-- Copied from GoogleService-Info.plist key REVERSED_CLIENT_ID -->
+				<string>com.googleusercontent.apps.191251944607-jp5vimr82a3oqq6p87c7eudri7c6sqid</string>
+				<string>fb369571748985192</string>
+			</array>
+		</dict>
+	</array>
+	<key>FacebookAppID</key>
+	<string>369571748985192</string>
+	<key>FacebookClientToken</key>
+	<string>aa0e5f4a49072376fc2df35e2a4d320a</string>
+	<key>FacebookDisplayName</key>
+	<string>CMSD_Agri </string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+	<string>fbapi</string>
+	<string>fb-messenger-share-api</string>
+	</array>
+	<!-- End of the Google Sign-in Section -->
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
