--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   get: ^4.6.6
   firebase_core: ^2.24.2
   firebase_auth: ^4.15.3
+  google_sign_in: ^6.2.1
+  google_sign_in_web: ^0.12.3+1
+  flutter_facebook_auth: ^6.0.3
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +67,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/facebook.png
+    - assets/google.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
