--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,8 @@ buildscript {
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        implementation 'com.facebook.android:facebook-login:latest.release'
+        classpath 'com.android.tools.build:gradle:7.0.0'
     }
 }
 
