--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   firebase_auth: ^4.15.3
   google_sign_in: ^6.2.1
   google_sign_in_web: ^0.12.3+1
-  flutter_facebook_auth: ^6.0.3
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +70,7 @@ flutter:
   assets:
     - assets/facebook.png
     - assets/google.png
+    - assets/images/apple.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
