Add Device Page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   google_sign_in: ^6.2.1
   google_sign_in_web: ^0.12.3+1
   flutter_spinkit: ^5.1.0
+  flutter_bluetooth_seria_changed: ^0.4.0
+  firebase_database: ^10.3.8
+  open_settings: ^2.0.2
+  permission_handler: ^11.1.0
 
 dev_dependencies:
   flutter_test:
