--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,8 +23,9 @@ if (flutterVersionName == null) {
 }
 
 android {
+    compileSdkVersion 33
+    buildToolsVersion "30.0.3"
     namespace "com.example.cmsd_home"
-    compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
     compileOptions {
