--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,8 @@ flutter:
     - assets/facebook.png
     - assets/google.png
     - assets/images/apple.png
+    - assets/images/CMSD.png
+    - assets/images/profile.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
