--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   permission_handler: ^11.1.0
   percent_indicator: ^4.2.3
   lottie: ^3.0.0
+  flutter_localization: ^0.2.0
 
 
 dev_dependencies:
