--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   percent_indicator: ^4.2.3
   lottie: ^3.0.0
   flutter_localization: ^0.2.0
+  shared_preferences: ^2.0.10
 
 
 dev_dependencies:
