--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   lottie: ^3.0.0
   flutter_localization: ^0.2.0
   shared_preferences: ^2.0.10
+  pie_chart: ^5.4.0
 
 
 dev_dependencies:
